refactor: SearchRecipeResultDto에서 DetailProductRecipeDto 사용하도록 수정